editor-components/location/location7/location7.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  background-color: color-mix(
    in srgb,
    var(--composer-html-background),
    var(--composer-font-color-primary) 5%
  );
  .max-content {
    .wrapper {
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
      gap: var(--composer-gap-xl);

      .title-row {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        margin-bottom: var(--composer-gap-lg);
        .title {
          font-size: 3rem;
          color: var(--composer-primary-color);
          letter-spacing: 0.2em;
          margin: 0;
        }
      }

      .map-container {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        max-width: 100%;
        .custom-map {
          position: relative;
          width: 100%;
          height: 400px;
          max-width: 800px;
          padding: var(--composeer-gap-md);
        }
        .dot {
          background: var(--composer-font-color-primary);
          opacity: 0.7;
          width: 8px;
          height: 8px;
          border-radius: 50%;
          position: absolute;
          z-index: 1;
         
        }
        .marker {
          background: var(--composer-primary-color);
          border-radius: 50%;
          box-shadow: 0 0 24px 8px var(--composer-primary-color);
          border: 2px solid var(--composer-primary-color);
          width: 18px;
          height: 18px;
          position: absolute;
          z-index: 10;
          display: flex;
          align-items: center;
          justify-content: center;
          cursor: pointer;
          transition: all 0.3s ease;
          &.active {
            transform: scale(1.2);
            box-shadow: 0 0 32px 12px var(--composer-primary-color);
          }
          &:hover {
            box-shadow: none;
          }
        }
        .background-image {
          width: 100%;
          height: 100%;
          display: block;
          position: absolute;
          left: 0;
          top: 0;
          z-index: 0;
          object-fit: contain;
        }
        .marker-image {
          width: 100%;
          height: 100%;
          border-radius: 50%;
          display: block;
        }
      }

      .tooltip {
        position: absolute;
        left: 0;
        top: 0;
        background: color-mix(
          in srgb,
          var(--composer-html-background),
          transparent 20%
        );
        color: var(--composer-font-color-primary);
        border-radius: var(--composer-border-radius-sm);
        box-shadow: var(--box-shadow-active);
        min-width: 200px;
        max-width: 300px;
        padding: var(--composer-gap-md) var(--composer-gap-lg);
        z-index: 100;
        flex-direction: column;
        align-items: flex-start;
        transform: translateY(-100%) translateX(-50%);
        margin-top: -10px;
        .tooltip-header {
          font-size: 1.25rem;
          color: var(--composer-primary-color);
          font-weight: bold;
          margin-bottom: var(--composer-gap-sm);
          letter-spacing: 0.1em;
          display: -webkit-box;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
          overflow: hidden;
          text-overflow: ellipsis;
          line-height: 1.5;
        }
        .tooltip-divider {
          width: 100%;
          height: 1px;
          background: var(--composer-font-color-primary);
          opacity: 0.3;
          margin-bottom: var(--composer-gap-sm);
        }
        .tooltip-content {
          font-size: 1rem;
          color: var(--composer-font-color-primary);
          line-height: 1.5rem;
          display: -webkit-box;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
          overflow: hidden;
          text-overflow: ellipsis;
          line-height: 1.5;
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .wrapper {
        gap: var(--composer-gap-md);
        .map-container {
          .custom-map {
            height: 350px;
            max-width: 100vw;
          }
        }
        .popover {
          min-width: 180px;
          .popover-header {
            font-size: 1.25rem;
          }
          .popover-content {
            font-size: 1rem;
          }
        }
        .tooltip {
          min-width: 250px;
          max-width: 300px;
          .tooltip-header {
            font-size: 1.5rem;
          }
          .tooltip-content {
            font-size: 1rem;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .wrapper {
        gap: var(--composer-gap-sm);
        .title-row {
          .title {
            font-size: 2rem;
            text-align: center;
          }
        }
        .map-container {
          .custom-map {
            height: 200px;
            max-width: 100vw;
          }
          .dot {
            width: 4px;
            height: 4px;
          }
          .marker {
            width: 12px;
            height: 12px;
          }
        }
        .popover {
          min-width: 120px;
          .popover-header {
            font-size: 1rem;
          }
          .popover-content {
            font-size: 1rem;
          }
        }
        .tooltip {
          min-width: 150px;
          max-width: 200px;
          padding: var(--composer-gap-sm) var(--composer-gap-md);
          .tooltip-header {
            font-size: 1rem;
          }
          .tooltip-content {
            font-size: 0.75rem;
            line-height: 1rem;
          }
        }
      }
    }
  }
}

